Card design completed

--- a/index.html
+++ b/index.html
@@ -6,19 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Design</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        h1 {
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            padding-top: 30px;
-            color: aqua;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>CSS Card Design</h1>
+    <h1 class="heading">CSS Card Design</h1>
     <div class="card">
         <div class="img">
             <img width="270" src="https://images.pexels.com/photos/3880179/pexels-photo-3880179.jpeg"
